# gpuflow

./: .gitignore  .pre-commit-config.yaml  README.md  desktop_dev_plan.md
.github/workflows/: ci.yml
gpuflow-api/: .gitignore  README.md  alembic.ini  dev.env  docker-compose.yml  main.py  pyproject.toml
gpuflow-api/alembic/: env.py
gpuflow-api/alembic/versions/: 57ccaf3ce226_add_machine_id.py  815e63192bc9_message.py  a511abc5d2ca_add_machine_id.py  add_device_id_to_machine.py  e6bd35fff47a_initial_tables.py
gpuflow-api/app/: main.py
gpuflow-api/app/api/: deps.py
gpuflow-api/app/api/v1/: router.py
gpuflow-api/app/api/v1/endpoints/: auth.py  jobs.py  machines.py  users.py  websockets.py
gpuflow-api/app/core/: celery_app.py  config.py  security.py
gpuflow-api/app/db/: base.py  base_class.py  session.py
gpuflow-api/app/models/: job.py  machine.py  users.py
gpuflow-api/app/schemas/: job.py  machine.py  user.py
gpuflow-api/app/services/: redis_bridge.py  tasks.py  websocket_manager.py
gpuflow-backend/: docker-compose.yml
gpuflow-desktop/: README.md  dev-app-update.yml  electron-builder.yml  package-lock.json  package.json  tailwind.config.js
gpuflow-desktop/desktop/: dev-app-update.yml  electron-builder.yml  package.json  tailwind.config.js
gpuflow-desktop/desktop/src/main/: index.ts  provider-engine.ts
gpuflow-desktop/provider-desktop/: README.md
gpuflow-desktop/src/renderer/: index.html
gpuflow-desktop/src/renderer/src/: App.tsx
gpuflow-pypi/: README.md
gpuflow-web/: README.md
gpuflow-web/web/: package-lock.json  package.json
(+24 files in other folders)
