[project]
name = "gpuflow-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.17.2",
    "fastapi>=0.124.4",
    "logfire>=4.16.0",
    "passlib[bcrypt]>=1.7.4",
    "psycopg2-binary>=2.9.11",
    "pydantic[email]>=2.12.5",
    "pydantic-settings>=2.12.0",
    "sqlalchemy>=2.0.45",
    "uvicorn[standard]>=0.38.0",
    "bcrypt>=5.0.0",
    "email-validator>=2.3.0",
    "argon2-cffi>=25.1.0",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.20",
    "pyjwt>=2.10.1",
    "ruff>=0.14.9",
    "pre-commit>=4.0.1",
    "celery[redis]>=5.6.0",
    "websockets>=15.0.1",
    "requests>=2.32.5",
    "docker>=7.1.0",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
